--- a/github.html
+++ b/github.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <img src="../imagens/tela-github.jpg" alt="">
+    <style>
+        *{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body
+{
+    width: 100vw;
+    height: 100vh;
+    background-image: url(imagens/tela-github.jpg) ;
+    background-size: cover;
     
+}
+    </style>
+</head>
+<body>        
 </body>
 </html>
