--- a/youtube.html
+++ b/youtube.html
@@ -5,30 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>youtube</title>
-    <style>
-        img {
-    width: 100vw;
-}
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-
-a {
-    display: block;
-    background-color: darkred;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    font-weight: bolder;
-    text-decoration: none;
-}
-    </style>
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/watch?v=K6tzeZLjUNE&list=RDEMqpVOIpXBRknFz-fyaberQQ&index=2&ab_channel=NPRMusic"> Acede Aqui </a>
+    <a href="https://www.youtube.com/watch?v=K6tzeZLjUNE&list=RDEMqpVOIpXBRknFz-fyaberQQ&index=2&ab_channel=NPRMusic" target="_blank"> Acede Aqui </a>
 </body>
 </html>
